# Uncomment when tests are ready:
# include(FetchContent)
# FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip)
# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
# FetchContent_MakeAvailable(googletest)
# add_executable(f77interpret_test f77interpret_test.cpp)
# target_link_libraries(f77interpret_test GTest::gtest_main f77interpret_lib)
# add_test(NAME f77interpret_test COMMAND f77interpret_test)
